# sway

include/: config.h  container.h  extensions.h
include/client/: registry.h
protocols/: CMakeLists.txt  dpms.xml
sway/: commands.c  container.c  extensions.c  handlers.c
swaybar/: main.c
wayland/: registry.c
